<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>MoodMovies</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.englishtown.vertx</groupId>
            <artifactId>vertx-httpservlet</artifactId>
            <version>2.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.englishtown.vertx</groupId>
            <artifactId>vertx-httpservlet-parent</artifactId>
            <version>2.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.englishtown.vertx</groupId>
            <artifactId>vertx-httpservlet</artifactId>
            <version>2.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.englishtown.vertx</groupId>
            <artifactId>vertx-httpservlet</artifactId>
            <version>2.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.englishtown.vertx</groupId>
            <artifactId>vertx-httpservlet-parent</artifactId>
            <version>2.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.englishtown.vertx</groupId>
            <artifactId>vertx-httpservlet-parent</artifactId>
            <version>2.2.1</version>
        </dependency>
        <dependency>
            <groupId>com.englishtown</groupId>
            <artifactId>vertx-mod-httpservlet</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.englishtown</groupId>
            <artifactId>vertx-mod-httpservlet</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>com.englishtown</groupId>
            <artifactId>vertx-mod-httpservlet</artifactId>
            <version>0.1.0</version>
        </dependency>
        <dependency>
            <groupId>net.officefloor.server</groupId>
            <artifactId>officeserver_servlet_test</artifactId>
            <version>3.40.0</version>
        </dependency>
        <dependency>
            <groupId>net.officefloor.server</groupId>
            <artifactId>officeserver_servlet_test</artifactId>
            <version>3.40.0</version>
        </dependency>
        <dependency>
            <groupId>net.officefloor.tutorial</groupId>
            <artifactId>HttpServletHttpServer</artifactId>
            <version>3.17.0</version>
        </dependency>
        <dependency>
            <groupId>net.officefloor.tutorial</groupId>
            <artifactId>HttpServletHttpServer</artifactId>
            <version>3.17.0</version>
        </dependency>
        <dependency>
            <groupId>com.ericsson.research.trap.transports</groupId>
            <artifactId>http-server-servlet-2.5</artifactId>
            <version>1.4.2</version>
        </dependency>
        <dependency>
            <groupId>com.ericsson.research.trap.transports</groupId>
            <artifactId>http-server-servlet-2.5</artifactId>
            <version>1.4.2</version>
        </dependency>
        <dependency>
            <groupId>com.ericsson.research.trap.transports</groupId>
            <artifactId>http-server-servlet-3.0</artifactId>
            <version>1.4.2</version>
        </dependency>
        <dependency>
            <groupId>com.ericsson.research.trap.transports</groupId>
            <artifactId>http-server-servlet-3.0</artifactId>
            <version>1.4.2</version>
        </dependency>
        <dependency>
            <groupId>com.github.luismanuelamengual</groupId>
            <artifactId>NeoGroup-HttpServer</artifactId>
            <version>1.2.0</version>
        </dependency>
        <dependency>
            <groupId>com.ericsson.research.trap.transports</groupId>
            <artifactId>http-server-servlet-3.0</artifactId>
            <version>1.4.2</version>
        </dependency>
        <dependency>
            <groupId>com.ericsson.research.trap.transports</groupId>
            <artifactId>http-server-servlet-3.0</artifactId>
            <version>1.4.2</version>
        </dependency>
        <dependency>
            <groupId>org.mariadb.jdbc</groupId>
            <artifactId>mariadb-java-client</artifactId>
            <version>2.7.1</version>
        </dependency>
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.14.3</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.json/json -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20230227</version>
        </dependency>


    </dependencies>


</project>